# nerd-font-installer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: main.rs
